--- a/paper.tex
+++ b/paper.tex
@@ -613,13 +613,15 @@ COMPLEXES has this definition}
 A basic example of a class function which doesn't depend of geometric conjugacy 
 \begin{proposition}[FIND SOMEWHERE TO CITE or put in appendix]
 \label{prop:central_char}
-    Any function supported on the center $\algebraicGroup{Z}(\mathbb{F})$ of $\algebraicGroup{G}(\finiteField)$ is a stable function. \calvin{maybe add in connected group} 
+    Any function $f$ supported on the center $\algebraicGroup{Z}(\mathbb{F})$ of $\algebraicGroup{G}(\finiteField)$ is a stable function. 
 \end{proposition}
 \begin{proof}
-\calvin{can probably delete this first part or put in appendix}
-The representation $R_T^G(\theta)$ is equal to $M \otimes_{\mathbb{C}[T]} \theta$ where $M$ is the virtual module corresponding to the Euler characteristic of cohomology on $X$ which as a variety is a subvariety of $\algebraicGroup{G}$ with the $G \times T$ action via $(g,\ell).x = gx\ell$. The center $\algebraicGroup{Z}$ then commutes across $X$ so the action of $(z,1)$ equals the action of $(1,z)$. The result is on the $\theta$ component of $M$, $z$ acts by $\theta(z)$.\\
-
-\calvin{todo. Here is a sketch. Use the definition of RTtheta to show for all torus theta pairs $(T,\theta)$, central element $x$ acts by scalar (in fact the scalar $\theta(x)$). This can also be showed using the character formula plus the ``only one cuspidal'' trick but it is probably overkill. Then if two pairs are conjugate, their hom dimesnion is nonzero, hence $x$ the scalar in both RTThetas} 
+\calvin{can probably put this proof in an appendix}
+Note it is enough to prove the statement for $f = 1_z$ an indicator function of an element $z \in \algebraicGroup{Z}(\mathbb{F})$. The he proof follows from the two claims:\\
+Claim 1: $z$ acts by the scalar $\theta(z)$ in the virtual representation $R_{T,\theta}$.\\
+Claim 2: If $(T,\theta),(T',\theta')$ are geometrically conjugate then $\theta|_{\algebraicGroup{Z}(\mathbb{F})} = \theta'_{\algebraicGroup{Z}(\mathbb{F})}$.\\
+Proof of claim 1: The representation $R_T^G(\theta)$ is equal to $M \otimes_{\mathbb{C}[T]} \theta$ where $M$ is the virtual module corresponding to the Euler characteristic of cohomology on $X$ which as a variety is a subvariety of $\algebraicGroup{G}$ with the $G \times T$ action via $(g,\ell).x = gx\ell$. The center $\algebraicGroup{Z}$ then commutes across $X$ so the action of $(z,1)$ equals the action of $(1,z)$. The result is on the $\theta$ component of $M$, $z$ acts by $\theta(z)$.\\
+Proof of claim 2: Geometric conjugacy is equivalent to for large enough $n$, there exists $g \in \algebraicGroup{G}(\mathbb{F}^n)$ such that $g\algebraicGroup{T}g^{-1} = \algebraicGroup{T}'$ and $g(\theta \circ Nm) g^{-1} = (\theta' \circ Nm)$. So when restricted to the center, $\theta \circ Nm = \theta' \circ Nm$. Since $Nm$ is surjective onto the $\mathbb{F}$-points, $\theta|_{\algebraicGroup{Z}(\mathbb{F})} = \theta'|_{\algebraicGroup{Z}(\mathbb{F})}$.
 \end{proof}
 
 
